hphp/hack/test/typecheck/duplicate_class_attributes.php.exp
File "duplicate_class_attributes.php", line 3, characters 22-33:
You cannot reuse the attribute __Deprecated (Naming[2062])
File "duplicate_class_attributes.php", line 3, characters 3-14:
__Deprecated was already used here
